# SpeedySlicingEngine

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  clean.sh  compile  hpse.cpp  hpse.h  parse_stl.cpp  parse_stl.h  slice.cpp  slice.h  stl2c3d.cpp  write_files.cpp  write_files.h
stl2c3d/: build.sh  stl2c3d.cpp
